# Encoder_MLC

./: .gitignore  CMakeLists.txt  README.md
include/: RogWH5.h  mlc_msd.h  mlcmsd.h
src/: RogWH5.cpp  main.cpp  mlc_msd.cpp  mlcmsd.cpp
test/: struct.txt
